List.of()를 Arrays.asList()로 변경하라
List.of()는 자바 9부터 지원하는 메서드인데, 현재 프로젝트에서는 자바 1.8을 사용하도록 설정되어 있습니다. 따라서 자바 1.8에서 사용 가능한 Arrays.asList()를 사용하여, 자바 버전을 변경하지 않고도 List.of()와 같이 product를 리스트에 넣어줄 수 있게 수정했습니다.