@@ -55,7 +55,7 @@ class ProductControllerTest {
                 .price(5000)
                 .build();
 
-        given(productService.getProducts()).willReturn(List.of(product));
+        given(productService.getProducts()).willReturn(Arrays.asList(product));
 
         given(productService.getProduct(1L)).willReturn(product);
 
